# cmake-bilibili

./: README.md
01_hello/: CMakeLists.txt  README.md  hello.cpp
02_message/: message.cmake
03_set_list/: README.md  list.cmake  set.cmake
04_control/: README.md  for.cmake  if.cmake
05_function/: func.cmake
06_scoop/: CMakeLists.txt  README.md
08_1_project/: CMakeLists.txt  README.md  main.cpp
08_2_project/: CMakeLists.txt  README.md  main.cpp
08_2_project/annimal/: annimal.cmake  cat.cpp
08_4_1project/: CMakeLists.txt  README.md
08_4_1project/annimal/: CMakeLists.txt  dog.cpp
08_4_2project/: CMakeLists.txt  README.md
08_4_2project/annimal/: CMakeLists.txt  dog.h
09_project/: CMakeLists.txt  README.md
10_project/: CMakeLists.txt  README.md  main.cpp
10_project/inc/: cat.h
11_header/: CMakeLists.txt  README.md  main.cpp
12_option/: CMakeLists.txt  README.md  main.cpp
12_option/annimal/: CMakeLists.txt
